--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "moment": "^2.29.4",
     "react-scroll-to-bottom": "^4.2.0",
+     "axios": "^1.4.0",
     "socket.io-client": "^4.7.1"
   },
   "devDependencies": {
